--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         jcenter()
         maven {
-            url  "http://dl.bintray.com/mobisystech/maven"
+            url "http://dl.bintray.com/mobisystech/maven"
         }
         maven {
             url 'https://maven.google.com/'
@@ -20,11 +20,12 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url  "http://dl.bintray.com/mobisystech/maven"
+            url "http://dl.bintray.com/mobisystech/maven"
         }
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url 'https://jitpack.io' }
     }
 }
