--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -15,7 +15,7 @@ android {
         applicationId "com.folioreader.android.sample"
         versionCode Integer.parseInt(project.VERSION_CODE)
         versionName project.VERSION_NAME
-        minSdkVersion Integer.parseInt(project.ANDROID_MIN_SDK)
+        minSdkVersion 15
         targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
 /*
 =======
